--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,13 +17,17 @@ android {
             "-L" + projectDir.absolutePath + "/src/main/jniLibs/armeabi-v7a " +
             "-L" + projectDir.absolutePath + "/src/main/jniLibs/x86 " +
             ""
-          stl "gnustl_static"
+          stl "gnustl_shared"
           abiFilters "armeabi-v7a", "x86"
         }
     }
     lintOptions {
         abortOnError false
     }
+    packagingOptions {
+	      exclude 'lib/armeabi-v7a/libgnustl_shared.so'
+	      exclude 'lib/x86/libgnustl_shared.so'
+	  }
 }
 
 dependencies {
